--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                         <span class="text-primary">KANG</span>
                     </h1>
                     <div class="subheading mb-5">
-                        302, sandoro-30gil-78, donjak-gu, Seoul · (010) 3820-5680 ·
+                        donjak-gu, Seoul · (010) 3820-5680 ·
                         <a href="mailto:name@email.com">dlsdud0519@naver.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
                         
-                        <a class="social-icon" href="https://github.com/kkkin02/kkkin02.github.io"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.instagram.com/whatsyourserialnumber/"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-instagram"></i></a>
                         
                     </div>
                 </div>
@@ -91,17 +91,11 @@
                             <div class="subheading mb-3">Bachelor of Advertising & Public Relations</div>
                             <div class="subheading mb-3">Bachelor of Cultural Contents</div>
                             <div>Advertising & Public Relations Track</div>
-                            <p>GPA: 3.89</p>
+                            <p>GPA</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2015 - August 2020</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Myeong-shin Girls' High School</h3>
-
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2012 - February 2015</span></div>
-                    </div>
+ 
                 </div>
             </section>
             <hr class="m-0" />
